fixed pageheader profile menu right alignment

--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ a {
 
 .profile-menu {
   position: absolute;
-  right: 10;
+  right: 20;
   height: 60px;
   line-height: 55px;
 }
